--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "^20.1.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.21",
     "angular-cli-ghpages": "^2.0.3",
     "autoprefixer": "^10.4.22",
     "jasmine-core": "~5.8.0",
